# parser_of_vacancies

./: README.md  exceptions.py  main.py  pyproject.toml  utils.py  work_with_API.py  work_with_json.py  work_with_vacancies.py
